packages/errors/test/__snapshots__/JIT_COMPONENT_TESTING.ansi
[31mThe [33mjustInTimeCompile[39m[31m configuration is only supported for Component Testing.[39m